# TelegramNotifierPlugin

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  example.json
src/: TelegramNotifierPlugin.cpp  TelegramNotifierPlugin.hpp
